# mahilo

./: .gitignore  README.md  agent_manager.py  client.py  pyproject.toml  requirements.txt  server.py  session.py  test.ipynb
docs/: llm_integration.md  policy_validation.md  validator_hook_prd.md
example_jsons/: dispatcher_example.json  plumber_example.json
examples/dispatcher/: README.md  run_server.py
examples/filmmaker/: tutorial.ipynb
examples/health_emergency/: README.md  logistics_coordinator.json  medical_advisor.json  public_communications_director.json  run_server.py
examples/health_emergency/example_jsons/1/: logistics_coordinator.json  medical_advisor.json  public_communications_director.json
examples/historical_event_simulator/: README.md  run_server.py
examples/historical_event_simulator/sessions/: historical_figure_agent.json
examples/policy_validation/: policy_example.py
examples/real_estate_management/: README.md  buyer_agent.py  run_server.py  seller_agent.py  tools.py
examples/real_estate_management/example_jsons/1/: buyer_agent.json  seller_agent_1.json
examples/real_estate_management/example_jsons/2/: buyer_agent.json  seller_agent_1.json
examples/real_estate_management/example_jsons/3/: buyer_agent.json  seller_agent_1.json  seller_agent_2.json
examples/real_estate_management/example_jsons/4/: buyer_agent.json  seller_agent_1.json  seller_agent_2.json
examples/scenario_911/: README.md  run_server.py
examples/scenario_911/example_jsons/1/: emergency_dispatcher.json  medical_proxy.json  police_proxy.json
examples/scenario_911/example_jsons/2/: emergency_dispatcher.json  medical_proxy.json  police_proxy.json
examples/story_weavers/: README.md  run_server.py
examples/story_weavers/example_jsons/1/: arunjoy_weaver.json  jayesh_weaver.json  ritvi_weaver.json
examples/team_of_agents/: README.md  control_plane.py  cookbook.ipynb  langgraph_marketing_agent.py  mahilo_sales_agent.py  pydanticai_product_agent.py
examples/team_of_agents/sessions/: sales_agent.json
examples/tutorial/: tutorial.ipynb
integration_tests/: test_langgraph.py  test_pydantic.py
legacy_tests/: dispatcher_example.py  health_emergency_example.py
mahilo/: __init__.py  agent.py  agent_manager.py  cli.py  client.py  llm_config.py  message_protocol.py  message_store.py  monitoring.py  policy.py  registry.py  server.py  session.py  tools.py
mahilo/integrations/langgraph/: agent.py  langgraph_agent.py  tools.py
mahilo/integrations/pydanticai/: agent.py  tools.py
mahilo/templates/centralized/: __init__.py  dispatcher.py  mold_specialist.py  plumber.py
mahilo/templates/historical_event_simulator/: context_agent.py  historical_figure_agent.py  what_if_agent.py
mahilo/templates/peer2peer/: __init__.py  logistics_coordinator.py  medical_advisor.py  public_communications_director.py
mahilo/templates/scenario_911/: dispatcher.py  medic.py  police.py
mahilo/templates/story_weavers/: story_weaver_agent.py
templates/centralized/: dispatcher.py  mold_specialist.py  plumber.py
templates/peer2peer/: logistics_coordinator.py  medical_advisor.py  public_communications_director.py
(+11 files in other folders)
