[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mahilo"
version = "0.1.0"
description = " A flexible framework for creating multi-agent systems that can each interact with humans while sharing relevant context internally."
authors = [{name = "Jayesh Sharma", email = "wjayesh@outlook.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai",
    "fastapi",
    "uvicorn",
    "websockets",
    "python-dotenv",
    "pydantic",
]

[project.urls]
Homepage = "https://github.com/wjayesh/mahilo"

[tool.setuptools]
packages = [
    "mahilo",
    "mahilo.templates",
    "mahilo.templates.peer2peer",
    "mahilo.templates.centralized",
]