[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mahilo"
version = "0.4.2"
description = " A flexible framework for creating multi-agent systems that can each interact with humans while sharing relevant context internally."
authors = [{name = "Jayesh Sharma", email = "wjayesh@outlook.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.55.0,<2.0.0",
    "fastapi>=0.109.2,<0.115.6",
    "uvicorn",
    "websockets==13.0.1",
    "python-dotenv",
    "pydantic",
    "rich",
    "langgraph>=0.2.60,<0.3.0",
    "pydantic-ai>=0.0.15,<0.1.0",
]

[project.optional-dependencies]
voice = ["pyaudio"]

[project.urls]
Homepage = "https://github.com/wjayesh/mahilo"

[project.scripts]
mahilo = "mahilo.cli:cli"

[tool.setuptools]
packages = [
    "mahilo",
    "mahilo.templates",
    "mahilo.templates.peer2peer",
    "mahilo.templates.centralized",
    "mahilo.integrations",
    "mahilo.integrations.langgraph",
    "mahilo.integrations.pydanticai",
]